# Drinks_Quality_Prediction_System

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cicd.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  Expriement.ipynb
src/mlProject/utils/: common.py
