[project]
name = "drinks-quality-prediction-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ensure==1.0.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "notebook>=7.5.7",
    "numpy>=2.1.0",
    "pandas>=2.2.3",
    "python-box>=7.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.0",
    "tqdm>=4.68.2",
    "types-pyyaml>=6.0.12.20260518",
]
